# eloquent-ai-challenge

./: .env.example  DEPLOYMENT.md  DESIGN.md  README.md  docker-compose.yaml
.github/workflows/: build-front-end.yaml  check-server.yaml
front-end/: .dockerignore  .example.env  .gitignore  Dockerfile  package.json  pnpm-lock.yaml
front-end/app/: app.css  routes.ts
front-end/app/components/: reasoning-popover.tsx
front-end/app/components/ui/: error-boundary.tsx  sheet.tsx  sidebar.tsx
front-end/app/lib/: api.server.ts  db.server.ts  utils.ts
front-end/app/lib/db/: chat.server.ts
front-end/app/lib/session/: auth.server.ts  cookie.server.ts
front-end/app/routes/: auth.callback.ts  auth.login.ts  auth.logout.ts  chat-layout.tsx  chat.$sessionId.tsx  chat.tsx  home.tsx
front-end/app/routes/auth/: login.ts  logout.ts
front-end/app/routes/chat/: layout.tsx  page.tsx
front-end/prisma/: schema.prisma
front-end/prisma/migrations/20250913222010_add_initial_schemas/: migration.sql
front-end/prisma/migrations/20250915043052_initial_schema/: migration.sql
front-end/prisma/migrations/20250915052101_init/: migration.sql
services/db/: Makefile
services/server/: .dockerignore  .example.env  Dockerfile  main.py  pyproject.toml
services/server/app/: dependencies.py  main.py
services/server/app/core/: config.py
services/server/app/routers/: chat.py  health.py
services/server/app/services/: optimized_rag.json  rag.py  rag_service.py  retriever.py
services/server/optimizer/: Makefile  optimized_rag.json  optimizer.py  train.csv  val.csv
(+5 files in other folders)
